# kiro-aws-security-agent-power

./: README.md
powers/aws-security-agent/: POWER.md  mcp.json
skills/security-agent-remediation/: .gitignore  SKILL.md  pyproject.toml
skills/security-agent-remediation/scripts/: fetch_findings.py  triage.py
